fixed homepage alignment (#2170)

--- a/packages/frontend/src/components/mbc/home/Home.scss
+++ b/packages/frontend/src/components/mbc/home/Home.scss
@@ -65,9 +65,6 @@
     margin-bottom: 30px;
   }
   .poweredBy {
-    background-color: #0487b9;
-    border-radius: 200px;
-    color: #ffffff;
     display: inline-block;
     padding: 5px 10px;
     font-size: var(--font-size-smallest);
